fixed footer alignment on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -170,5 +170,4 @@ nav.concise * {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 15px;
 	padding: 30px;
-	padding-left: 35%;
 }
